# Gestao_codigo

./: CHANGELOG.md  Dockerfile  README.md  alembic.ini  compose.yaml  database.db  entrypoint.sh  pipeline.yaml  pyproject.toml  webserver.py
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 01ec65c1e8a5_initial.py  5f4e4d3f3e5b_create_todos_table.py  849b8ffdeb0f_create_users_table.py
pfsw_gestao/: database.py  security.py  webserver.py
pfsw_gestao/models/: __init__.py  models.py
pfsw_gestao/routes/: auth.py  router.py  todos.py  users.py
pfsw_gestao/schemas/: __init__.py
pfsw_gestao/tests/: conftest.py  test_app.py  test_auth.py  test_create_user.py  test_db.py  test_delete_user.py  test_list_users.py  test_security.py  test_todos.py  test_update_partial_user.py  test_update_total_user.py  test_users.py
routes/: router.py
schemas/: __init__.py
