[project]
name = "gestao_codigo"
version = "1.0.0"

[tool.poetry]
name = "gestao_codigo"
version = "0.2.0"
description = ""
authors = ["Rodrigo Anjinho Gomes <rogomes96@outlook.com>"]
readme = "README.md"
packages = [
    { include = "pfsw_gestao" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
duckdb = ">=1.3.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
fastapi = ">=0.115.12,<0.116.0"
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.41,<3.0.0" }
pydantic = { extras = ["email"], version = ">=2.11.5,<3.0.0" }
uvicorn = ">=0.34.3,<0.35.0"
alembic = ">=1.16.1,<2.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pyjwt = ">=2.10.1,<3.0.0"
tzdata = ">=2025.2,<2026.0"
pwdlib = { extras = ["argon2"], version = ">=0.2.1,<0.3.0" }
python-multipart = ">=0.0.20,<0.0.21"
aiosqlite = ">=0.21.0,<0.22.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}

[tool.poetry.dev-dependencies]
taskipy = "^1.14.1"
ruff = "^0.11.12"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.3"
freezegun = "^1.5.2"
testcontainers = "^4.11.0"

[tool.poetry.scripts]
test = "pytest"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = "strict"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.taskipy.tasks]
format = "ruff format --preview ."
lint = "ruff check --fix --exit-non-zero-on-fix"
dev = "uvicorn webserver:app --port 8080 --host 0.0.0.0 --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"